src/test/ui/E0705.stderr
error[E0705]: the feature `raw_identifiers` is included in the Rust 2018 edition
  --> $DIR/E0705.rs:12:12
   |
LL | #![feature(raw_identifiers)]
   |            ^^^^^^^^^^^^^^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0705`.
